--- a/component/search.css
+++ b/component/search.css
@@ -8,7 +8,9 @@
     border-radius:28px;
     background:  #f6f6f6;
 
-    transition: background 0.25ms;
+
+    position: relative;
+    top: 18px; 
   }
   :host(:focus-within){
     background: #f1f1f1;
@@ -22,7 +24,7 @@
     outline: none;
     border: none;
     background: transparent;
-    width: 300px;
+    width: 500px;
   }
   .icon{
 
