--- a/firstapp/src/app/categ/categ.component.html
+++ b/firstapp/src/app/categ/categ.component.html
@@ -1,23 +1,25 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <div class="dropdown-container tasneef" style="font-weight: bold;">
+      التصنيفات
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
         <!-- Dropdown for Super Dails -->
         <li class="nav-item dropdown">
           <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Super Dails
+          <i class="bi bi-bag"></i>Super Dails
           </a>
         </li>
 
         <!-- Dropdown for Shoes -->
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            أحذية
+            <i class="bi bi-cart"></i>  أحذية
           </a>
           <div class="dropdown-menu">
             <ul class="list-unstyled">
-              <li><a class="dropdown-item" href="#">أحذية رجالية</a></li>
+              <li><a class="dropdown-item-hadi" href="#">أحذية رجالية</a></li>
               <li><a class="dropdown-item" href="#">رياضي</a></li>
               <li><a class="dropdown-item" href="#">رسمية وكلاسيكية</a></li>
               <li><a class="dropdown-item" href="#">بساطير</a></li>
@@ -27,7 +29,7 @@
               <li><a class="dropdown-item" href="#">صنادل وشباشب للرجال</a></li>
             </ul>
             <ul class="list-unstyled">
-              <li><a class="dropdown-item" href="#">أحذية نسائية</a></li>
+              <li><a class="dropdown-item-hadi" href="#">أحذية نسائية</a></li>
               <li><a class="dropdown-item" href="#">أحذية رياضية</a></li>
               <li><a class="dropdown-item" href="#">جزم وبساطير</a></li>
               <li><a class="dropdown-item" href="#">روكي وكعب</a></li>
@@ -37,7 +39,7 @@
               <li><a class="dropdown-item" href="#">صنادل وشباشب للصبايا</a></li>
             </ul>
             <ul class="list-unstyled">
-              <li><a class="dropdown-item" href="#">أحذية أطفال</a></li>
+              <li><a class="dropdown-item-hadi" href="#">أحذيةأطفال</a></li>
             </ul>
           </div>
         </li>
@@ -45,11 +47,11 @@
         <!-- Dropdown for Clothes -->
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            الملابس
+            <i class="bi bi-person-standing-dress"></i>  الملابس
           </a>
           <div class="dropdown-menu">
             <ul class="list-unstyled">
-              <li><a class="dropdown-item" href="#">ملابس رجالية</a></li>
+              <li><a class="dropdown-item-hadi" href="#">ملابس رجالية</a></li>
               <li><a class="dropdown-item" href="#">بناطيل جينز</a></li>
               <li><a class="dropdown-item" href="#">بناطيل كاجوال</a></li>
               <li><a class="dropdown-item" href="#">بناطيل رياضية</a></li>
@@ -64,7 +66,7 @@
               <li><a class="dropdown-item" href="#">ملابس داخلية</a></li>
             </ul>
             <ul class="list-unstyled">
-              <li><a class="dropdown-item" href="#">ملابس نسائية</a></li>
+              <li><a class="dropdown-item-hadi" href="#">ملابس نسائية</a></li>
               <li><a class="dropdown-item" href="#">الملابس الداخلية</a></li>
               <li><a class="dropdown-item" href="#">ملابس بيتية</a></li>
               <li><a class="dropdown-item" href="#">بيجامات</a></li>
@@ -80,7 +82,7 @@
         <!-- Dropdown for Watches -->
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            عطور
+            <i class="bi bi-luggage-fill"></i>  عطور
           </a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="#">عطور رجالية</a></li>
@@ -95,7 +97,7 @@
         <!-- Dropdown for Electronics -->
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            قسم الجمال
+            <i class="bi bi-heart"></i>  قسم الجمال
           </a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="#">مكياج الوجه و العناية بالبشرة </a></li>
@@ -111,116 +113,192 @@
         <!-- Dropdown for Bags and Accessories -->
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-          ساعات
+            <i class="bi bi-watch"></i>  ساعات
           </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-          </ul>
+          <div class="dropdown-menu">
+            <ul class="list-unstyled">
+              <li><a class="dropdown-item-hadi" href="#"> ساعات رجالية</a></li>
+              <li><a class="dropdown-item" href="#">ساعات جلدية</a></li>
+              <li><a class="dropdown-item" href="#"> ساعات معدنية</a></li>
+
+            </ul>
+            <ul class="list-unstyled">
+              <li><a class="dropdown-item-hadi" href="#">ساعات نسائية</a></li>
+              <li><a class="dropdown-item" href="#"> ساعات جلدية </a></li>
+              <li><a class="dropdown-item" href="#"> ساعات معدنية</a></li>
+
+            </ul>
+
+          </div>
         </li>
 
         <!-- Dropdown for Kids and Toys -->
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            الكترونيات
+            <i class="bi bi-tv"></i>  الكترونيات
           </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-          </ul>
+          <div class="dropdown-menu">
+            <ul class="list-unstyled">
+              <li><a class="dropdown-item-hadi" href="#">موبايلات واجهزة لوحية</a></li>
+              <li><a class="dropdown-item" href="#"> SAMSUNG </a></li>
+              <li><a class="dropdown-item" href="#"> iPhone </a></li>
+              <li><a class="dropdown-item" href="#"> Xiaomi</a></li>
+              <li><a class="dropdown-item" href="#"> NOKIA </a></li>
+              <li><a class="dropdown-item" href="#"> Oppo </a></li>
+              <li><a class="dropdown-item" href="#"> Realme </a></li>
+              <li><a class="dropdown-item" href="#"> اكسسوارات الهواتف </a></li>
+
+
+            </ul>
+            <ul class="list-unstyled">
+              <li><a class="dropdown-item-hadi" href="#" > لابتوب وكمبيوتر </a></li>
+              <li><a class="dropdown-item" href="#">  اكسسوارات الكومبيوتر </a></li>
+            </ul>
+
+            <ul class="list-unstyled">
+              <li><a class="dropdown-item" href="#" > سماعات</a></li>
+              </ul>
+            <ul class="list-unstyled">
+              <li><a class="dropdown-item " href="#">  اكسسوارات اخرى </a></li>
+            </ul>
+
+          </div>
         </li>
 
         <!-- Dropdown for Sports and Health -->
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            شنط واكسسوارات
+            <i class="bi bi-briefcase"></i>  شنط واكسسوارات
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <ul>
+            <li><a class="dropdown-item" href="#"> اكسسوارات رجال</a></li>
+            <li><a class="dropdown-item" href="#"> حقائب مدرسية</a></li>
           </ul>
+          <ul>
+            <li><a class="dropdown-item" href="#"> قرطاسية</a></li>
+            <li><a class="dropdown-item" href="#"> محافظ رجالية</a></li>
+          </ul>
+          <ul>
+            <li><a class="dropdown-item" href="#"> شنط لابتوب</a></li>
+            <li><a class="dropdown-item" href="#"> شنط كتف</a></li>
+          </ul>
+          <ul>
+            <li><a class="dropdown-item" href="#"> اكسسوارات للنساء</a></li>
+            <li><a class="dropdown-item" href="#"> نظارات شمسية و عدسات لاصقة</a></li>
+            <li><a class="dropdown-item" href="#"> طواقي</a></li>
+          </ul>
+          </ul>
+
         </li>
 
         <!-- Dropdown for Beauty and Perfumes -->
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            الاطفال والالعاب
+            <i class="bi bi-trophy"></i>  الاطفال والالعاب
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><a class="dropdown-item" href="#">الالعاب </a></li>
+            <li><a class="dropdown-item" href="#"> مستلزمات الاطفال والبيبي</a></li>
+
           </ul>
         </li>
 
         <!-- Dropdown for Kitchen and Home -->
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            الرياضة والصحة
+            <i class="bi bi-universal-access"></i>  الرياضة والصحة
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><a class="dropdown-item" href="#">مشدات واحزمة طبية </a></li>
+
           </ul>
         </li>
 
         <!-- Dropdown for Gifts -->
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            المنزل والحديقة
+            <i class="bi bi-houses-fill"></i>  المنزل والحديقة
           </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-          </ul>
+          <div class="dropdown-menu">
+            <ul class="list-unstyled">
+              <li><a class="dropdown-item-hadi" href="#">مفروشات  </a></li>
+              <li><a class="dropdown-item" href="#"> ستائر وبرادي </a></li>
+              <li><a class="dropdown-item" href="#"> مستلزمات واكسسوارات </a></li>
+              <li><a class="dropdown-item" href="#"> الحمام</a></li>
+              <li><a class="dropdown-item" href="#"> مناشف وبشاكير </a></li>
+              <li><a class="dropdown-item" href="#"> كراسي و طاولات </a></li>
+              <li><a class="dropdown-item" href="#"> بطانيات و أغطية أسرة </a></li>
+              <li><a class="dropdown-item" href="#"> رفوف وديكورات منزلية </a></li>
+              <li><a class="dropdown-item" href="#"> سلات </a></li>
+
+
+
+            </ul>
+            <ul class="list-unstyled">
+              <li><a class="dropdown-item-hadi" href="#"> الانارة </a></li>
+              <li><a class="dropdown-item" href="#"> ثريات </a></li>
+              <li><a class="dropdown-item" href="#"> إنارة خارجية </a></li>
+              <li><a class="dropdown-item" href="#"> إنارة جانبية داخلي </a></li>
+              <li><a class="dropdown-item" href="#"> سبتات </a></li>
+              <li><a class="dropdown-item" href="#"> جلوبات </a></li>
+              <li><a class="dropdown-item" href="#"> أحبال إنارة </a></li>
+              <li><a class="dropdown-item" href="#"> كشافات </a></li>
+              <li><a class="dropdown-item" href="#"> نيونات ستاند إنارة </a></li>
+
+
+            </ul>
+
+            <ul class="list-unstyled">
+              <li><a class="dropdown-item" href="#" > الأدوات المنزلية</a></li>
+              <li><a class="dropdown-item" href="#" > مستلزمات التنظيف</a></li>
+              </ul>
+
+                <ul class="list-unstyled">
+                  <li><a class="dropdown-item" href="#" > أدوات و مستلزمات للمطبخ</a></li>
+                  <li><a class="dropdown-item" href="#" > اكسسوارات مكتبية</a></li>
+                  </ul>
+
+                  <ul class="list-unstyled">
+                    <li><a class="dropdown-item" href="#" >  مستلزمات الحيوانات  </a></li>
+                    <li><a class="dropdown-item" href="#" >  منتجات الحديقة </a></li>
+                    </ul>
+                    <ul class="list-unstyled">
+                      <li><a class="dropdown-item" href="#" > اكسسوارات المنزل </a></li>
+                      </ul>
+
+
+          </div>
         </li>
 
 
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button"  aria-expanded="false">
-            كتب وروايات
+          <a class="nav-link " href="#" role="button"  aria-expanded="false">
+            <i class="bi bi-tools"></i>  معدات صناعية
           </a>
         </li>
 
 
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button"  aria-expanded="false">
-            كتب وروايات
+          <a class="nav-link " href="#" role="button"  aria-expanded="false">
+            <i class="bi bi-car-front"></i>  اكسسوارات السيارات
           </a>
         </li>
 
         <!-- Dropdown for Books and Stationery -->
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            كتب وروايات
+            <i class="bi bi-book-half"></i>  كتب وروايات
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><a class="dropdown-item" href="#"> كتب تعليمية</a></li>
+            <li><a class="dropdown-item" href="#"> روايات وقصص</a></li>
+
           </ul>
         </li>
 
       </ul>
     </div>
   </div>
+</div>
 </nav>
