--- a/firstapp/src/app/categ/categ.component.css
+++ b/firstapp/src/app/categ/categ.component.css
@@ -1,6 +1,6 @@
 
 .dropdown:hover .dropdown-menu {
-  display: flex; /* عرض القائمة عند مرور المؤشر */
+  display: flex;
 }
 .dropdown-menu-hadi li {
   font-weight:bold;
@@ -23,7 +23,7 @@ font-size: 1.2em;
 }
 
 .nav-item {
-  margin-bottom: 10px; /* مسافة بين كل عنصر */
+  margin-bottom: 10px;
 }
 .dropdown-menu {
   left: 100%;
@@ -31,13 +31,11 @@ font-size: 1.2em;
   transform: translateX(0);
   margin-left: 0;
 }
-/* حاوية للقوائم المنسدلة */
 .dropdown-container {
   display: flex;
-  gap: 5px; /* التحكم في المسافة بين القوائم */
+  gap: 5px;
 }
 
-/* القوائم المنسدلة لتظهر باتجاه اليمين */
 .nav-item .dropdown-menu {
   left: 100%;
   top: 0;
@@ -45,42 +43,39 @@ font-size: 1.2em;
   margin-left: 0;
 }
 
-/* لضمان تقارب القوائم المنسدلة */
 .nav-item.dropdown {
   margin: 0;
 }
-/* لجعل النص كبير وغامق مع خط تحت النص */
 .dropdown-item-hadi {
-  font-size: 1.1rem; /* حجم الخط */
-  font-weight: bold; /* جعل النص غامق */
-  color: #000; /* لون النص أسود غامق */
-  border-bottom: 2px  #000; /* خط صغير تحت النص */
-  margin-bottom: 10px; /* مسافة بين العنصر والعناصر الأخرى */
-  padding: 5px 0; /* مسافة حول النص */
+  font-size: 1.1rem;
+  font-weight: bold;
+  color: #000;
+  border-bottom: 2px  #000;
+  margin-bottom: 10px;
+  padding: 5px 0;
 }
 
-/* ترتيب جميل للعناصر */
 ul.list-unstyled {
-  padding-left: 20px; /* تحريك القائمة قليلاً للداخل */
-  margin-bottom: 20px; /* مسافة أسفل القائمة */
+  padding-left: 20px;
+  margin-bottom: 20px;
   margin-top: 20px;
   margin-left: 20px;
   margin-right: 20px;
 }
 
 ul.list-unstyled li {
-  margin-bottom: 10px; /* مسافة بين العناصر */
+  margin-bottom: 10px;
 }
 
 .dropdown-item {
-  font-size: 1.1rem; /* حجم الخط للعناصر الأخرى */
-  color: #333; /* لون النص للعناصر الأخرى */
-  padding: 5px 10px; /* مسافة حول النص */
-  transition: color 0.3s ease, background-color 0.3s ease; /* انتقال لوني لطيف */
+  font-size: 1.1rem;
+  color: #333;
+  padding: 5px 10px;
+  transition: color 0.3s ease, background-color 0.3s ease;
 }
 
 .dropdown-item:hover {
-  color:deepskyblue; /* لون عند التمرير بالماوس */
-  background-color: #f8f9fa; /* لون الخلفية عند التمرير بالماوس */
+  color:deepskyblue;
+  background-color: #f8f9fa;
 }
 
