--- a/firstapp/src/app/categ/categ.component.html
+++ b/firstapp/src/app/categ/categ.component.html
@@ -79,7 +79,7 @@
           </div>
         </li>
 
-        <!-- Dropdown for Watches -->
+        <!-- Dropdown for Perfumes -->
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             <i class="bi bi-luggage-fill"></i>  عطور
@@ -94,7 +94,7 @@
           </ul>
         </li>
 
-        <!-- Dropdown for Electronics -->
+        <!-- Dropdown for Beauty Department -->
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             <i class="bi bi-heart"></i>  قسم الجمال
@@ -110,7 +110,7 @@
           </ul>
         </li>
 
-        <!-- Dropdown for Bags and Accessories -->
+        <!--  Dropdown for watches-->
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             <i class="bi bi-watch"></i>  ساعات
@@ -131,8 +131,8 @@
 
           </div>
         </li>
+        <!-- Dropdown for Electronics -->
 
-        <!-- Dropdown for Kids and Toys -->
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             <i class="bi bi-tv"></i>  الكترونيات
@@ -164,8 +164,8 @@
 
           </div>
         </li>
+        <!-- Dropdown for Bags and Accessories -->
 
-        <!-- Dropdown for Sports and Health -->
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             <i class="bi bi-briefcase"></i>  شنط واكسسوارات
@@ -192,7 +192,7 @@
 
         </li>
 
-        <!-- Dropdown for Beauty and Perfumes -->
+        <!-- Dropdown for paly and child -->
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             <i class="bi bi-trophy"></i>  الاطفال والالعاب
@@ -204,7 +204,8 @@
           </ul>
         </li>
 
-        <!-- Dropdown for Kitchen and Home -->
+                <!-- Dropdown for Sports and Health -->
+
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             <i class="bi bi-universal-access"></i>  الرياضة والصحة
@@ -214,8 +215,8 @@
 
           </ul>
         </li>
+        <!-- Dropdown for  Home -->
 
-        <!-- Dropdown for Gifts -->
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             <i class="bi bi-houses-fill"></i>  المنزل والحديقة
